# internal/api/handlers/v1/user.go
@@ -1,25 +1,25 @@
 package v1
 
 import (
-	"fmt"
-
 	jwtware "github.com/gofiber/contrib/jwt"
 	"github.com/gofiber/fiber/v2"
 	"github.com/golang-jwt/jwt/v5"
 	"github.com/msakp/golang-web-template/internal/domain/contracts"
 	"github.com/msakp/golang-web-template/internal/domain/dto"
-	"github.com/msakp/golang-web-template/pkg/logger"
+	"github.com/msakp/golang-web-template/internal/wrapper"
 )
 
 type userHandler struct {
-	userService contracts.UserService
-	authService contracts.AuthService
+	userService      contracts.UserService
+	authService      contracts.AuthService
+	validatorService contracts.ValidatorService
 }
 
-func NewUserHandler(us contracts.UserService, as contracts.AuthService) *userHandler {
+func NewUserHandler(us contracts.UserService, as contracts.AuthService, vs contracts.ValidatorService) *userHandler {
 	return &userHandler{
-		userService: us,
-		authService: as,
+		userService:      us,
+		authService:      as,
+		validatorService: vs,
 	}
 }
 
@@ -28,7 +28,7 @@ func (uh *userHandler) Setup(r fiber.Router, secretKey string) {
 		SigningKey: jwtware.SigningKey{Key: []byte(secretKey)},
 		ContextKey: "subject",
 	})
-	u := r.Group("/user")
+	u := r.Group("/users")
 	u.Post("/sign-up", uh.Register)
 	u.Post("/sign-in", uh.Login)
 	u.Get("/me", authMiddle, uh.GetInfo)
@@ -44,17 +44,22 @@ func (uh *userHandler) Setup(r fiber.Router, secretKey string) {
 //	@Produce	json
 //	@Success	201	{object}	dto.UserAuthResponse
 //	@Failure	400	{object}	dto.HttpErr
-//	@Router		/user/sign-up [post]
+//	@Failure	500	{object}	dto.HttpErr
+//	@Router		/users/sign-up [post]
 func (uh *userHandler) Register(c *fiber.Ctx) error {
 	userRegister := new(dto.UserRegister)
 	if err := c.BodyParser(userRegister); err != nil {
-		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
+		httpErr := wrapper.BadRequestErr(err.Error())
+		return c.Status(httpErr.HttpCode).JSON(httpErr)
 	}
-	token, id, err := uh.userService.Register(c.Context(), userRegister)
+	if err := uh.validatorService.ValidateRequestData(&userRegister); err != nil {
+		return c.Status(err.HttpCode).JSON(err)
+	}
+	resp, err := uh.userService.Register(c.Context(), userRegister)
 	if err != nil {
-		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
+		return c.Status(err.HttpCode).JSON(err)
 	}
-	return c.Status(201).JSON(dto.UserAuthResponse{Token: token, Id: id})
+	return c.Status(201).JSON(resp)
 }
 
 // LoginUser godoc
@@ -66,17 +71,23 @@ func (uh *userHandler) Register(c *fiber.Ctx) error {
 //	@Produce	json
 //	@Success	200	{object}	dto.UserAuthResponse
 //	@Failure	400	{object}	dto.HttpErr
+//	@Failure	404	{object}	dto.HttpErr
+//	@Failure	500	{object}	dto.HttpErr
 //	@Router		/user/sign-in [post]
 func (uh *userHandler) Login(c *fiber.Ctx) error {
 	userLogin := new(dto.UserLogin)
 	if err := c.BodyParser(userLogin); err != nil {
-		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
+		httpErr := wrapper.BadRequestErr(err.Error())
+		return c.Status(httpErr.HttpCode).JSON(httpErr)
 	}
-	token, id, err := uh.userService.Login(c.UserContext(), userLogin)
+	if err := uh.validatorService.ValidateRequestData(&userLogin); err != nil {
+		return c.Status(err.HttpCode).JSON(err)
+	}
+	resp, err := uh.userService.Login(c.UserContext(), userLogin)
 	if err != nil {
-		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
+		return c.Status(err.HttpCode).JSON(err)
 	}
-	return c.Status(200).JSON(dto.UserAuthResponse{Token: token, Id: id})
+	return c.Status(200).JSON(resp)
 
 }
 
@@ -89,18 +100,18 @@ func (uh *userHandler) Login(c *fiber.Ctx) error {
 //	@Produce	json
 //	@Success	200	{object}	dto.UserView
 //	@Failure	401	{object}	dto.HttpErr
+//	@Failure	500	{object}	dto.HttpErr
 //	@Router		/user/me [get]
 func (uh *userHandler) GetInfo(c *fiber.Ctx) error {
 	token := c.Locals("subject").(*jwt.Token)
-	email, err := uh.authService.GetSubject(token)
+	email, err := uh.authService.GetSubject(c.UserContext(), token)
 
 	if err != nil {
-		logger.FromCtx(c.UserContext()).Error(c.UserContext(), fmt.Sprintf("AuthService err: %s", err.Error()))
-		return c.Status(500).JSON(dto.HttpErr{Message: "PIZDEC"})
+		return c.Status(err.HttpCode).JSON(err)
 	}
 	user, err := uh.userService.GetProfile(c.UserContext(), email)
 	if err != nil {
-		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
+		return c.Status(err.HttpCode).JSON(err)
 	}
 	return c.Status(200).JSON(user)
 }
